testing/framework/resources/Advanced/Failing/mondrian/query6103.q
select sum(fact.amount) as m0 from fact as fact;
